[project]
name = "agent-security-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "typer>=0.16.0",
]

[project.optional-dependencies]
pydantic_ai = [
    "mcp==1.12.4",
    "pydantic-ai[logfire]>=0.6.2",
    "openai==1.99.1",
    "anthropic>=0.62.0",
    "google-genai>=1.29.0",
]

crew = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "crewai-tools[mcp]"
]

proxy = [
    "mitmproxy"
]

langchain = [
    "langchain>=0.3.27",
    "langgraph",
    "langchain-mcp-adapters",
    "langchain-anthropic",
    "langchain-google-genai",
]

api = [
    "fastapi",
    "uvicorn",
    "protobuf",
    "opentelemetry-proto",
]


[project.scripts]
run_crew = "src.agents.crew_ai.sample_crew.src.sample_crew.main:run"
train_crew = "src.agents.crew_ai.sample_crew.src.sample_crew.main:train"
replay_crew = "src.agents.crew_ai.sample_crew.src.sample_crew.main:replay"
test_crew = "src.agents.crew_ai.sample_crew.src.sample_crew.main:test"
