[project]
name = "sample_crew"
version = "0.1.0"
description = "sample_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0"
]

[project.scripts]
sample_crew = "sample_crew.main:run"
run_crew = "sample_crew.main:run"
train = "sample_crew.main:train"
replay = "sample_crew.main:replay"
test = "sample_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
